remove extent report support
+ optimize logger file initialization
+ change allure back to the default reporter