@@ -33,7 +33,7 @@ public class TestNGListenerHelper {
         // This condition checks to confirm that this is not a cucumber test runner instance
         // If this condition is removed the total number of tests will be zero because the cucumber
         // test runner doesn't have any test methods
-        if (!(testSuite.getAllMethods().size() == 1 && testSuite.getAllMethods().get(0).getMethodName().equals("runScenario"))) {
+        if (!(testSuite.getAllMethods().size() == 1 && testSuite.getAllMethods().getFirst().getMethodName().equals("runScenario"))) {
             ReportManagerHelper.setTotalNumberOfTests(testSuite.getAllMethods().size());
         }
     }
@@ -50,9 +50,9 @@ public class TestNGListenerHelper {
     private static void attachBeforeConfigurationMethods(){
         if(!beforeMethods.isEmpty()) {
             if (beforeMethods.size() > 1) {
-                TestNGListenerHelper.attachTestArtifacts(beforeMethods.get(beforeMethods.size() - 1));
+                TestNGListenerHelper.attachTestArtifacts(beforeMethods.getLast());
             } else {
-                TestNGListenerHelper.attachTestArtifacts(beforeMethods.get(0));
+                TestNGListenerHelper.attachTestArtifacts(beforeMethods.getFirst());
             }
             beforeMethods.clear();
         }
@@ -71,9 +71,9 @@ public class TestNGListenerHelper {
     private static void attachAfterConfigurationMethods(){
         if(!afterMethods.isEmpty()) {
             if (afterMethods.size() > 1) {
-                TestNGListenerHelper.attachTestArtifacts(afterMethods.get(afterMethods.size() - 1));
+                TestNGListenerHelper.attachTestArtifacts(afterMethods.getLast());
             } else {
-                TestNGListenerHelper.attachTestArtifacts(afterMethods.get(0));
+                TestNGListenerHelper.attachTestArtifacts(afterMethods.getFirst());
             }
             afterMethods.clear();
         }
@@ -96,41 +96,6 @@ public class TestNGListenerHelper {
         }
     }
 
-//    public static void updateConfigurationMethodLogs(ITestResult iTestResult) {
-//        if (iTestResult.getMethod().isTest()) {
-//
-//            //attach current test logs to the current test
-//            TestNGListenerHelper.attachTestArtifacts(iTestResult);
-//
-//            //point Allure UUID to the current test method
-////            TestNGListenerHelper.writeAllureUUID();
-//        } else {
-//            if (iTestResult.getMethod().isBeforeMethodConfiguration()) {
-//                // get test result and store it for later processing
-//
-//                beforeMethods.add(iTestResult);
-//                beforeMethods.forEach(TestNGListenerHelper::attachTestArtifacts);
-//                beforeMethods.clear();
-//            } else if (iTestResult.getMethod().isAfterMethodConfiguration()) {
-//                // get test result and store it for later processing
-//                afterMethods.add(iTestResult);
-//            }
-//        }
-//
-//        /*
-//         * unable to attach afterMethod logs to the relevant test method
-//         * TODO: find a fix
-//         */
-//        if (!afterMethods.isEmpty()) {
-//            //point Allure UUID to the last executed test method
-////            TestNGListenerHelper.readAllureUUID();
-//
-//            //attach after configuration logs to the previous test
-//            afterMethods.forEach(TestNGListenerHelper::attachTestArtifacts);
-//            afterMethods.clear();
-//        }
-//    }
-
     public static String getTestName() {
         return testName.get();
     }
@@ -142,7 +107,7 @@ public class TestNGListenerHelper {
     public static void configureCrossBrowserExecution(List<XmlSuite> suites) {
         if (!"off".equals(SHAFT.Properties.platform.crossBrowserMode())) {
             suites.forEach(suite -> {
-                var firefox_test = (XmlTest) suite.getTests().get(0).clone();
+                var firefox_test = (XmlTest) suite.getTests().getFirst().clone();
                 firefox_test.setParameters(Map.of(
                         "executionAddress", "dockerized",
                         "targetOperatingSystem", Platform.LINUX.name(),
@@ -152,7 +117,7 @@ public class TestNGListenerHelper {
                 firefox_test.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
                 firefox_test.setName(firefox_test.getName() + " - FireFox");
 
-                var safari_test = (XmlTest) suite.getTests().get(0).clone();
+                var safari_test = (XmlTest) suite.getTests().getFirst().clone();
                 safari_test.setParameters(Map.of(
                         "executionAddress", "dockerized",
                         "targetOperatingSystem", Platform.LINUX.name(),
@@ -162,7 +127,7 @@ public class TestNGListenerHelper {
                 safari_test.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
                 safari_test.setName(safari_test.getName() + " - Safari");
 
-                var chrome_test = (XmlTest) suite.getTests().get(0);
+                var chrome_test = (XmlTest) suite.getTests().getFirst();
                 chrome_test.setParameters(Map.of(
                         "executionAddress", "dockerized",
                         "targetOperatingSystem", Platform.LINUX.name(),
@@ -353,14 +318,12 @@ public class TestNGListenerHelper {
                     methodDescription = iTestNGMethod.getDescription();
                 }
                 ReportManagerHelper.logTestInformation(className, methodName, methodDescription);
-                ReportManagerHelper.extentReportsCreateTest(className + "." + methodName, methodDescription);
             } else if (iTestNGMethod instanceof ConfigurationMethod configurationMethod) {
                 className = configurationMethod.getTestClass().getName();
                 methodName = configurationMethod.getMethodName();
                 var configurationMethodType = configurationMethod.getMethodName();
 
                 ReportManagerHelper.logConfigurationMethodInformation(className, methodName, configurationMethodType);
-                ReportManagerHelper.extentReportsReset();
             }
         }
     }
